--- a/RetroGame Collect/Info.plist
+++ b/RetroGame Collect/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Para que puedas sacar esa foto en el momento</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Para sacar imagenes para que no olvidar la imagen del juego </string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
